Add basic html structure for characters and button area

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,37 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
+
 <body>
+    <main>
+        <div id="hero">
+            <div class="character-card">
+                <h4 class="name">Wizard</h4>
+                <img class="avatar" src="assets/images/wizard.png" alt="An avatar image of the Wizard character reciting incantations from his book of magic">
+                <p class="health">health: <strong>60</strong></p>
+                <div class="dice-container">
+                    <div class="dice">6</div>
+                </div>
+            </div>
+        </div>
+
+        <div id="monster">
+            <div class="character-card">
+                <h4 class="name">Orc</h4>
+                <img class="avatar" src="/assets/images/orc.png" alt="An Avatar image of the Orc monster character calling out to the heavens with hand both hands raised">
+                <p class="health">health: <strong>10</strong></p>
+                <div class="dice-container">
+                    <div class="dice">4</div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <section id="actions">
+        <button id="attack-button">Attack</button>
+    </section>
+
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
