--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <button id="attack-button">Attack</button>
     </section>
 
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js" type="module"></script>
 </body>
 
 </html>
