--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     </main>
 
     <section id="actions">
-        <button id="attack-button">Attack</button>
+        <div>
+            <button id="attack-button">Attack</button>
+        </div>
+        
     </section>
 
     <script src="assets/js/script.js" type="module"></script>
